intel/bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/log.txt
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:14:12: error: default initialization of an object of const type 'const int'
 int const DV_II_45_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:15:12: error: default initialization of an object of const type 'const int'
 int const DV_II_46_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:16:12: error: default initialization of an object of const type 'const int'
 int const DV_II_46_2_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:17:12: error: default initialization of an object of const type 'const int'
 int const DV_II_47_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:18:12: error: default initialization of an object of const type 'const int'
 int const DV_II_48_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:19:12: error: default initialization of an object of const type 'const int'
 int const DV_II_49_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:20:12: error: default initialization of an object of const type 'const int'
 int const DV_II_49_2_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:21:12: error: default initialization of an object of const type 'const int'
 int const DV_II_50_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:22:12: error: default initialization of an object of const type 'const int'
 int const DV_II_50_2_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:23:12: error: default initialization of an object of const type 'const int'
 int const DV_II_51_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:24:12: error: default initialization of an object of const type 'const int'
 int const DV_II_51_2_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:25:12: error: default initialization of an object of const type 'const int'
 int const DV_II_52_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:26:12: error: default initialization of an object of const type 'const int'
 int const DV_II_53_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:27:12: error: default initialization of an object of const type 'const int'
 int const DV_II_54_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:28:12: error: default initialization of an object of const type 'const int'
 int const DV_II_55_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:29:12: error: default initialization of an object of const type 'const int'
 int const DV_II_56_0_bit ; 
           ^
                          = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:30:12: error: default initialization of an object of const type 'const int'
 int const DV_I_43_0_bit ; 
           ^
                         = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:31:12: error: default initialization of an object of const type 'const int'
 int const DV_I_44_0_bit ; 
           ^
                         = 0
bench_214_new/extr_.gitsha1dcubc_check.c_ubc_check_with_main/extr_.gitsha1dcubc_check.c_ubc_check_with_main.c:32:12: error: default initialization of an object of const type 'const int'
 int const DV_I_45_0_bit ; 
           ^
                         = 0
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
HLS FPGA Parse FAILED.
